--- a/Converter/Info.plist
+++ b/Converter/Info.plist
@@ -6,6 +6,11 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<key>API_KEY</key>
 	<string>$(API_KEY)</string>
 	<key>BASE_URL</key>
