Added Test Cases for View Model

--- a/Converter.xcodeproj/xcshareddata/xcschemes/Converter.xcscheme
+++ b/Converter.xcodeproj/xcshareddata/xcschemes/Converter.xcscheme
@@ -60,7 +60,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "61E78E452813CBED009112A1"
+            BuildableName = "Converter.app"
+            BlueprintName = "Converter"
+            ReferencedContainer = "container:Converter.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
