--- a/Converter/Config/Development.xcconfig
+++ b/Converter/Config/Development.xcconfig
@@ -7,3 +7,15 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+// Ignore Config Tracking
+// https://stackoverflow.com/questions/936249/how-to-stop-tracking-and-ignore-changes-to-a-file-in-git
+
+// App Setting
+APP_NAME = Converter
+APP_BUNDLE_ID = com.nagarro.converter
+
+// SDK API Key
+API_KEY = a4227c67327fcc1cc44904f75a0743cf
+
+// Server URL
+BASE_URL = http:/$()/data.fixer.io/api/
